--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
           echo test, and deploy your project.
           
       - name: Trigger Travis Job
+        uses: saiNammi/nsp@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           repository: saiNammi/nsp
