--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -11,4 +11,5 @@ jobs:
     steps:
       - name: Run build script
         run: ./.github/scripts/build.sh
+        working-directory: scripts
         shell: bash
