--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run build script
-        run: ./.github/scripts/build.sh
-        working-directory: scripts
+        run: |
+          pwd
+          ls
+          ./.github/scripts/build.sh
         shell: bash
