--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -9,6 +9,8 @@ jobs:
   example-job:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+  
       - name: Run build script
         run: |
           pwd
