--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
+      - name: update date
+        shell: bash
+        run: |
+          date >> date.log
   
       - name: Run build script
         run: |
