--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -14,7 +14,7 @@ jobs:
       - name: update date
         shell: bash
         run: |
-          date >> date.log
+          date >> ./date.log
   
       - name: Run build script
         run: |
