--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -11,11 +11,26 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: update date
+      - shell: bash
+        run: |
+          expr 3 + 7 > math-homework.txt
+      - name: Upload math result for job 1
+        uses: actions/upload-artifact@v3
+        with:
+          name: homework
+          path: math-homework.txt
+          
+      - name: date
         shell: bash
         run: |
           date >> ./date.log
-  
+      
+      - name: Upload result
+        uses: actions/upload-artifact@v3
+        with:
+          name: updatedDate
+          path: date.log
+          
       - name: Run build script
         run: |
           chmod 777 ./.github/scripts/build.sh
