--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,9 @@
 os: linux
 dist: focal
 arch: ppc64le
-#group: power-focal
 
 services:
     - docker
-
-env:
-  global:
-    - PACKAGE_NAME="dex"
-    - VERSION="v2.35.3"
-    - LANGUAGE="Nodejs"
 
 jobs:
   include:
@@ -26,4 +19,4 @@ jobs:
       workspaces:
         use: ws1
       script:
-        - cat foo.txt || true
+        - cat foo.txt
