--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,17 @@ arch: ppc64le
 
 services:
     - docker
+    
+before_install:
+    - sudo apt install -y jq; jq --version
+    # Currently pointing to test branch code of build-script repo
+    - git clone https://github.com/nikhil-kalbande/build-scripts.git
+    - cd build-scripts; git checkout jen-travis-mig
+
 
 jobs:
   include:
     - stage: warm_cache
-      before_script:
-        - sudo apt install -y jq; jq --version
-        - git clone https://github.com/nikhil-kalbande/build-scripts.git
-        - cd build-scripts; git checkout jen-travis-mig
       script:
         - echo "Hello world" > foo.txt
       workspaces:
@@ -22,5 +25,7 @@ jobs:
     - stage: use_cache
       workspaces:
         use: ws1
+      git:
+        clone: false
       script:
         - cat foo.txt
