--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,18 @@
-os: linux
-dist: focal
+---
 arch: ppc64le
+dist: focal
+os: linux
+language: shell
 
 services:
     - docker
-    
 
-jobs:
-  include:
-    - stage: warm_cache
-      before_install:
-        - sudo apt install -y jq; jq --version
-        # Currently pointing to test branch code of build-script repo
-        - git clone https://github.com/nikhil-kalbande/build-scripts.git
-        - cd build-scripts; git checkout jen-travis-mig; cd d/d3-color
-      script:
-        - ls -ltr
-        - pwd
-      workspaces:
-        create:
-          name: ws1
-          paths:
-            - .
-    - stage: use_cache
-      workspaces:
-        use: ws1
-      before_script:
-        - ls -ltr
-        - pwd
-        - cd /home/travis/build/saiNammi/nsp/build-scripts/d/d3-color
-        - ls -ltr
-      script:
-        - ls -ltr
-        - pwd
+before_install:
+    - docker pull registry.access.redhat.com/ubi8/ubi:8.7
+
+script:
+    - sudo apt update -y && sudo apt-get install file -y
+    - pip3 install requests
+    - pip3 install docker
+    - python3 builds.py &
+    - SCRIPT_PID=$!;while ps -p $SCRIPT_PID > /dev/null;do echo "$SCRIPT_PID is running"; sleep 2; done; wait $SCRIPT_PID; my_pid_status=$?; travis_terminate $my_pid_status
