--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,12 @@ language: shell
 
 services:
     - docker
-
+    
 before_install:
-    - docker pull registry.access.redhat.com/ubi8/ubi:8.5
+    - docker pull registry.access.redhat.com/ubi8/ubi:8.7
 
 script:
     - sudo apt update -y && sudo apt-get install file -y
     - pip3 install requests
     - pip3 install docker
-    - python3 builds.py &
-    - SCRIPT_PID=$!;while ps -p $SCRIPT_PID > /dev/null;do echo "$SCRIPT_PID is running"; sleep 2; done; wait $SCRIPT_PID; my_pid_status=$?; travis_terminate $my_pid_status
+    - python3 builds.py
