--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,7 @@ language: shell
 services:
     - docker
     
-before_install:
-    - docker pull registry.access.redhat.com/ubi8/ubi:8.7
 
 script:
-    - sudo apt update -y && sudo apt-get install file -y
-    - pip3 install --upgrade requests
-    - pip3 install --upgrade docker
-    - python3 builds.py
+    - lscpu && free -h && df -hT
+
